Update documentation and cell order

--- a/TrafficSignClassification.ipynb
+++ b/TrafficSignClassification.ipynb
@@ -6,7 +6,7 @@
       "name": "TrafficSignClassification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMclSCv8A9oIwjsrB+k8IiH",
+      "authorship_tag": "ABX9TyMSRLdpCmW16juXEzBMHmJS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,13 +38,38 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "2aD9pIBhyupU"
+      },
+      "source": [
+        "## **Google Drive Dataset Import**\n",
+        "*Make sure to follow dataset download instructions on [Github](https://github.com/AnikethDandu/traffic-sign-classification)*"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KQgAG3K6-u43"
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/gdrive')\n",
+        "!cp -r /content/gdrive/My\\ Drive/ColabNotebooks/Data/ traffic_sign_images.zip\n",
+        "!unzip traffic_sign_images.zip/traffic_sign_images.zip\n",
+        "!rm -r traffic_sign_images.zip/"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "NBDRPiq7M-y2"
       },
       "source": [
         "## **Import Libraries**\n",
         "Python standard libraries. If there are problems with torch, run the following command\n",
         "```\n",
-        "# !pip install torch\n",
+        "!pip install torch\n",
         "```\n",
         "\n"
       ]
@@ -56,7 +81,6 @@
       },
       "source": [
         "import cv2\n",
-        "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "import os\n",
         "import pandas as pd\n",
@@ -77,7 +101,7 @@
       },
       "source": [
         "## **Main Script Variable Initialization**\n",
-        "This cell initializes variables for the main script. It includes hyperparameters for the network, a standard image size, the datatsets and dataloaders, and the path to the training data folders."
+        "Initializes variables for the main script. It includes hyperparameters for the network, a standard image size, the datatsets and dataloaders, and the path to the training data directories."
       ]
     },
     {
@@ -91,16 +115,16 @@
         "BATCH_SIZE = 16\n",
         "learning_rate = 0.001\n",
         "\n",
-        "# Tuple for desired standard image size after resizing\n",
+        "# Tuple for desired image size\n",
         "image_size = (-1, 3, 50, 50)\n",
         "\n",
-        "# Variables holding training and evaluation datasets and dataloaders\n",
+        "# Training and evaluation Datasets and DataLoaders\n",
         "training_dataset = None\n",
         "testing_dataset = None\n",
         "train_dataloader = None\n",
         "test_dataloader = None\n",
         "\n",
-        "# Path to folders holding training data sorted by class\n",
+        "# Path to class sorted training data directories\n",
         "train_path = 'traffic_sign_images/Train'"
       ],
       "execution_count": null,
@@ -113,7 +137,7 @@
       },
       "source": [
         "## **Convolutional Neural Network**\n",
-        "A PyTorch CNN class with 4 Convolutional layers and 2 Linear layers. The ReLU and max pooling functions are applied after each layer."
+        "A CNN class with four 2D Convolutional layers and two Linear layers. The ReLU function is appliead after each layer. The max pooling function is applied after each Convolutional layer."
       ]
     },
     {
@@ -148,8 +172,7 @@
         "    \"\"\"\n",
         "    Initializes network layers for input image of size 32x32x3\n",
         "\n",
-        "    :var PADDING_SIZE: size of padding applied to all sides of input matrix to\n",
-        "      preserve input volume\n",
+        "    :var PADDING_SIZE: size of padding applied to all sides of input matrix to preserve input volume\n",
         "    :type: int\n",
         "    :var KERNEL_SIZE: size of feature extraction filter\n",
         "    :type: int\n",
@@ -223,7 +246,7 @@
       },
       "source": [
         "### **Custom Dataset Class**\n",
-        "This class was created by subclassing the PyTorch Dataset class to easily read the training and evaluation csv and iterate over the dataset \\"
+        "The class subclasses the PyTorch Dataset class to read the training and evaluation csv and iterate over the dataset"
       ]
     },
     {
@@ -286,7 +309,6 @@
         "    \"\"\"\n",
         "    image = cv2.imread(os.path.join(self.root_dir, self.df.iloc[idx][7]), cv2.IMREAD_COLOR)\n",
         "    image = cv2.resize(image, (self.img_size, self.img_size))\n",
-        "    label = self.df.iloc[idx][6]\n",
         "    sample = {'image': torch.tensor(image), 'label': self.df.iloc[idx][6]}\n",
         "    return sample\n"
       ],
@@ -299,8 +321,8 @@
         "id": "ITUhF2D5NRU-"
       },
       "source": [
-        "### **Dataset creation function**\n",
-        "This function reassigns global variables to Dataset and DataLoader classes"
+        "### **Dataset Creation Function**\n",
+        "The function reassigns global variables to the corresponding Dataset and DataLoader classes, creating shuffled training and evaluation datasets separated into batches"
       ]
     },
     {
@@ -334,7 +356,7 @@
       },
       "source": [
         "## **Model Training and Evaluation**\n",
-        "The below functions use the network given in the function parameter and train / evaluate it using the corresponding datasets"
+        "The functions below train / evaluate the network given in the function parameter"
       ]
     },
     {
@@ -343,7 +365,8 @@
         "id": "_2LBbxIkNtBs"
       },
       "source": [
-        "### **Model Training Function**"
+        "### **Model Training Function**\n",
+        "The function trains the model, printing loss for every epoch"
       ]
     },
     {
@@ -354,8 +377,8 @@
       "source": [
         "def train_model(net):\n",
         "  \"\"\"\n",
-        "  The model training function\n",
-        "  Prints epoch number and corresponding loss after every iteration\n",
+        "  Iterates over training dataset, adjusting model gradients\n",
+        "  Prints epoch number and corresponding loss after every epoch\n",
         "\n",
         "  :param net: CNN to be trained\n",
         "  :type net: torch.nn.Module\n",
@@ -366,9 +389,6 @@
         "      batch_labels = [0 for i in range(BATCH_SIZE)]\n",
         "      for label_idx, label in enumerate(batch_lbls):\n",
         "        batch_labels[label_idx] = label.item()\n",
-        "        \n",
-        "      batch_imgs = batch_imgs\n",
-        "      batch_labels = batch_labels\n",
         "      \n",
         "      optimizer.zero_grad()\n",
         "      outputs = net(batch_imgs.to(device))\n",
@@ -386,7 +406,8 @@
         "id": "bzne8eUYNYfL"
       },
       "source": [
-        "### **Model Evaluation Function**"
+        "### **Model Evaluation Function**\n",
+        "The function iterates through the evaluation dataset, evaluating the network response by comparing it to each image's class label"
       ]
     },
     {
@@ -397,7 +418,7 @@
       "source": [
         "def evaluate_model(net):\n",
         "  \"\"\"\n",
-        "  The model evaluation function\n",
+        "  Iterates over evaluation dataset without adjusting model gradients, comparing model predicted class to true class\n",
         "  Prints accuracy for each class, raw class total correct, and total image accuracy and raw score\n",
         "\n",
         "  :param net: CNN to be trained\n",
@@ -452,13 +473,12 @@
         "create_datasets()\n",
         "\n",
         "# Calculate total number of images in training dataset\n",
-        "total_images = 0\n",
+        "total_images = len(training_dataset)\n",
         "class_count = []\n",
         "for folder in os.listdir(train_path):\n",
         "  if folder != '.DS_Store':\n",
         "    image_count = len([img for img in os.listdir(os.path.join(train_path, folder))])\n",
         "    class_count.append(image_count)\n",
-        "    total_images += image_count\n",
         "\n",
         "# Calculate the class weights (due to unequal class image sizes)\n",
         "final_weights = torch.Tensor([1 - img_count/total_images for img_count in class_count]).to(device)\n",
@@ -471,32 +491,6 @@
         "# Train and evaluate the model\n",
         "train_model(conv_net)\n",
         "evaluate_model(conv_net)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "7glLQXmMN9RO"
-      },
-      "source": [
-        "## **Google Drive Dataset Import**"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "KQgAG3K6-u43"
-      },
-      "source": [
-        "'''\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/gdrive')\n",
-        "!cp -r /content/gdrive/My\\ Drive/ColabNotebooks/Data/ traffic_sign_images.zip\n",
-        "!unzip traffic_sign_images.zip/traffic_sign_images.zip\n",
-        "!rm -r traffic_sign_images.zip/\n",
-        "'''"
       ],
       "execution_count": null,
       "outputs": []
